--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ async function sendData() {
   const reward   = document.getElementById("reward").value.trim();
   const quantity = document.getElementById("quantity").value.trim();
   try {
-    const response = await fetch("https://bug-blush.vercel.app/", {
+    const response = await fetch("https://bug-blush.vercel.app/api/proxy", {
       method: "POST",
       headers: {
         "Content-Type": "application/json"
