--- a/index.html
+++ b/index.html
@@ -1,19 +1,46 @@
-async function sendData() {
-  const cookie   = document.getElementById("cookie").value.trim();
-  const reward   = document.getElementById("reward").value.trim();
-  const quantity = document.getElementById("quantity").value.trim();
-  try {
-    const response = await fetch("https://bug-blush.vercel.app/api/proxy", {
-      method: "POST",
-      headers: {
-        "Content-Type": "application/json"
-      },
-      body: JSON.stringify({ cookie, reward, quantity })
-    });
+<!DOCTYPE html>
+<html lang="vi">
+<head>
+  <meta charset="UTF-8" />
+  <title>Form gửi dữ liệu</title>
+</head>
+<body>
+  <h2>Form Gửi Dữ Liệu</h2>
 
-    const resultText = await response.text();
-    document.getElementById("result").textContent = resultText;
-  } catch (err) {
-    document.getElementById("result").textContent = "Lỗi: " + err;
+  <label>Cookie:</label><br>
+  <input type="text" id="cookie" size="80"><br><br>
+
+  <label>Reward:</label><br>
+  <input type="text" id="reward"><br><br>
+
+  <label>Quantity:</label><br>
+  <input type="text" id="quantity"><br><br>
+
+  <button onclick="sendData()">Gửi</button>
+
+  <h3>Kết quả:</h3>
+  <pre id="result"></pre>
+
+  <script>
+  async function sendData() {
+    const cookie   = document.getElementById("cookie").value.trim();
+    const reward   = document.getElementById("reward").value.trim();
+    const quantity = document.getElementById("quantity").value.trim();
+
+    try {
+      // ✅ Gửi request tới proxy API trên Vercel
+      const response = await fetch("https://bug-blush.vercel.app/api/proxy", {
+        method: "POST",
+        headers: { "Content-Type": "application/json" },
+        body: JSON.stringify({ cookie, reward, quantity })
+      });
+
+      const resultText = await response.text();
+      document.getElementById("result").textContent = resultText;
+    } catch (err) {
+      document.getElementById("result").textContent = "Lỗi: " + err;
+    }
   }
-}
+  </script>
+</body>
+</html>
