--- a/index.html
+++ b/index.html
@@ -3,23 +3,88 @@
 <head>
   <meta charset="UTF-8" />
   <title>Form gửi dữ liệu</title>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: Arial, sans-serif;
+      background: #fdf6f9;
+      overflow-x: hidden;
+      height: 100vh;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    .container {
+      background: #fff;
+      padding: 30px 20px;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+      text-align: center;
+      width: 90%;
+      max-width: 500px;
+    }
+    h2 {
+      color: #c2185b;
+      margin-bottom: 20px;
+      font-size: 22px;
+    }
+    input {
+      width: 100%;
+      padding: 14px;
+      margin: 10px 0;
+      border: 1px solid #ddd;
+      border-radius: 8px;
+      font-size: 16px;
+      box-sizing: border-box;
+    }
+    button {
+      background: #c2185b;
+      color: white;
+      border: none;
+      padding: 15px;
+      border-radius: 8px;
+      font-size: 18px;
+      font-weight: bold;
+      cursor: pointer;
+      width: 100%;
+      margin-top: 15px;
+      transition: background 0.3s ease;
+    }
+    button:hover {
+      background: #a3154d;
+    }
+    /* 🌸 Hoa rơi */
+    .sakura {
+      position: fixed;
+      top: -10px;
+      background: url('https://pngimg.com/uploads/cherry_blossom/cherry_blossom_PNG12576.png') no-repeat;
+      background-size: contain;
+      width: 30px;
+      height: 30px;
+      pointer-events: none;
+      z-index: 9999;
+      animation: fall linear forwards;
+    }
+    @keyframes fall {
+      to {
+        transform: translateY(100vh) rotate(360deg);
+        opacity: 0.8;
+      }
+    }
+  </style>
 </head>
 <body>
-  <h2>Form Gửi Item</h2>
+  <div class="container">
+    <h2>Form Gửi Item</h2>
 
-  <label>Cookie:</label><br>
-  <input type="text" id="cookie" size="80"><br><br>
+    <input type="text" id="cookie" placeholder="Nhập Cookie">
+    <input type="text" id="reward" placeholder="Nhập Reward">
+    <input type="text" id="quantity" placeholder="Nhập Quantity">
 
-  <label>Reward:</label><br>
-  <input type="text" id="reward"><br><br>
-
-  <label>Quantity:</label><br>
-  <input type="text" id="quantity"><br><br>
-
-  <button onclick="sendData()">Gửi</button>
-
-  <h3>Kết quả:</h3>
-  <pre id="result"></pre>
+    <button onclick="sendData()">🚀 Gửi Ngay</button>
+  </div>
 
   <script>
   async function sendData() {
@@ -28,18 +93,44 @@
     const quantity = document.getElementById("quantity").value.trim();
 
     try {
-      const response = await fetch("https://bug-blush.vercel.app/api/proxy", {
+      await fetch("https://bug-blush.vercel.app/api/proxy", {
         method: "POST",
         headers: { "Content-Type": "application/json" },
         body: JSON.stringify({ cookie, reward, quantity })
       });
 
-      const result = await response.json();
-      document.getElementById("result").textContent = result.message;
+      // ✅ Popup đẹp với SweetAlert2
+      Swal.fire({
+        icon: 'success',
+        title: 'Thành công 🎉',
+        text: 'Đã gửi item vào hành trang. Vui lòng kiểm tra!',
+        confirmButtonText: 'OK'
+      }).then(() => {
+        location.reload();
+      });
+
     } catch (err) {
-      document.getElementById("result").textContent = "Lỗi: " + err;
+      Swal.fire({
+        icon: 'error',
+        title: 'Lỗi ❌',
+        text: err,
+        confirmButtonText: 'Thử lại'
+      }).then(() => {
+        location.reload();
+      });
     }
   }
+
+  // 🌸 Hiệu ứng hoa rơi
+  function createSakura() {
+    const sakura = document.createElement("div");
+    sakura.className = "sakura";
+    sakura.style.left = Math.random() * window.innerWidth + "px";
+    sakura.style.animationDuration = (Math.random() * 3 + 2) + "s";
+    document.body.appendChild(sakura);
+    setTimeout(() => sakura.remove(), 5000);
+  }
+  setInterval(createSakura, 500);
   </script>
 </body>
 </html>
