--- a/index.html
+++ b/index.html
@@ -3,53 +3,60 @@
 <head>
   <meta charset="UTF-8" />
   <title>Form gửi dữ liệu</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <style>
-    body {
+    html, body {
       margin: 0;
       padding: 0;
       font-family: Arial, sans-serif;
       background: #fdf6f9;
-      height: 100vh;
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
       display: flex;
       justify-content: center;
       align-items: center;
-      overflow-x: hidden;
     }
     .container {
       background: #fff;
-      padding: 30px 20px;
+      padding: 40px 20px;
       border-radius: 12px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+      box-shadow: 0 4px 12px rgba(0,0,0,0.15);
       text-align: center;
-      width: 350px;
+      width: 95%;
+      max-width: 600px;  /* 🔹 to lên toàn màn hình nhưng vẫn giới hạn */
+      height: 90%;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
     }
     h2 {
       color: #c2185b;
-      margin-bottom: 20px;
-      font-size: 22px;
+      margin-bottom: 30px;
+      font-size: 28px;
     }
     input {
       width: 90%;
-      padding: 12px;
-      margin: 8px auto;
+      padding: 18px;
+      margin: 12px auto;
       display: block;
-      border: 1px solid #ddd;
-      border-radius: 8px;
-      font-size: 16px;
+      border: 2px solid #ddd;
+      border-radius: 10px;
+      font-size: 20px;
       text-align: center;
     }
     button {
       background: #c2185b;
       color: white;
       border: none;
-      padding: 15px;
-      border-radius: 8px;
-      font-size: 18px;
+      padding: 20px;
+      border-radius: 12px;
+      font-size: 24px;
       font-weight: bold;
       cursor: pointer;
-      width: 95%;
-      margin-top: 15px;
+      width: 90%;
+      margin-top: 20px;
       display: block;
       margin-left: auto;
       margin-right: auto;
@@ -65,8 +72,8 @@
       top: -10px;
       background: url('https://i.imgur.com/5xHCn8R.png') no-repeat;
       background-size: contain;
-      width: 20px;
-      height: 20px;
+      width: 25px;
+      height: 25px;
       pointer-events: none;
       z-index: 9999;
       animation: fall linear forwards;
@@ -131,7 +138,7 @@
       });
 
       // 🌸 Tạo hoa rơi khi gửi
-      for (let i=0; i<10; i++) createSakura();
+      for (let i=0; i<15; i++) createSakura();
 
     } catch (err) {
       Swal.fire({
